--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -2,53 +2,263 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagar Facturas</title>
+    <title>Gestión de Facturas</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- Integración de SweetAlert2 -->
+    <!-- Asegúrate de tener este archivo CSS o ajustar los estilos según necesites -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <!-- Librerías para exportar -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+    <style>
+        /* Estilos para los modales */
+        .modal {
+            display: none; /* Oculto por defecto */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4); /* Fondo semi-transparente */
+            justify-content: center;
+            align-items: center;
+        }
+        .modal-content {
+            background-color: #fefefe;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+            max-height: 90%;
+            overflow: auto;
+            position: relative;
+        }
+        .close {
+            color: #aaa;
+            position: absolute;
+            top: 10px;
+            right: 25px;
+            font-size: 30px;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        /* Estilos para el modal de reporte de pantalla completa */
+        #reporte-modal .modal-content {
+            width: 95%;
+            height: 95%;
+        }
+        /* Estilos para los botones de exportación */
+        #export-buttons {
+            margin-bottom: 20px;
+            text-align: right;
+        }
+        #export-buttons button {
+            margin-left: 10px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        /* Estilos adicionales para tablas en modales */
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <h2>Pago de Facturas</h2>
+    <h2>Gestión de Facturas</h2>
 
     <!-- Botón para abrir la página de gestión de empresas -->
     <a href="empresas.html" target="_blank" class="btn">Gestionar Empresas</a>
+
+    <!-- Botones de acción -->
+    <div class="acciones">
+        <button class="btn" id="agregar-factura-btn">Agregar Factura</button>
+        <button class="btn" id="editar-factura-btn" disabled>Editar Factura</button>
+        <button class="btn" id="eliminar-factura-btn" disabled>Eliminar Factura</button>
+        <button class="btn" id="pagar-facturas-btn" disabled>Pagar Facturas</button>
+        <button class="btn" id="generar-reporte-btn">Generar Reporte</button> <!-- Nuevo botón -->
+    </div>
+
+    <!-- Modal para agregar/editar factura -->
+    <div id="factura-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-factura-modal" class="close">&times;</span>
+            <h3 id="modal-title">Agregar Nueva Factura</h3>
+            <div class="form-group">
+                <label for="sucursal-factura">Seleccionar Sucursal:</label>
+                <select id="sucursal-factura">
+                    <option value="">Seleccione una sucursal</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="proveedor-factura">Seleccionar Proveedor:</label>
+                <select id="proveedor-factura">
+                    <option value="">Seleccione un proveedor</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="dias-credito-factura">Días de Crédito del Proveedor:</label>
+                <input type="number" id="dias-credito-factura" readonly>
+            </div>
+            <div class="form-group">
+                <label for="numero-factura">Número de Factura:</label>
+                <input type="text" id="numero-factura" placeholder="Ingrese el número de factura">
+            </div>
+            <div class="form-group">
+                <label for="fecha-emision">Fecha de Emisión:</label>
+                <input type="date" id="fecha-emision">
+            </div>
+            <div class="form-group">
+                <label for="fecha-vencimiento">Fecha de Vencimiento:</label>
+                <input type="date" id="fecha-vencimiento" readonly>
+            </div>
+            <div class="form-group">
+                <label for="monto-factura">Monto de la Factura:</label>
+                <input type="number" id="monto-factura" placeholder="Ingrese el monto de la factura">
+            </div>
+            <button class="btn" id="guardar-factura">Guardar Factura</button>
+            <button class="btn" id="actualizar-factura" style="display: none;">Actualizar Factura</button>
+        </div>
+    </div>
+
+    <!-- Filtros -->
+    <div class="filtros">
+        <label for="filtro-sucursal">Sucursal:</label>
+        <select id="filtro-sucursal">
+            <option value="todas">Todas</option>
+            <!-- Opciones generadas dinámicamente -->
+        </select>
+
+        <label for="filtro-empresa">Empresa:</label>
+        <select id="filtro-empresa">
+            <option value="todas">Todas</option>
+            <!-- Opciones generadas dinámicamente -->
+        </select>
+
+        <label for="filtro-proveedor">Proveedor:</label>
+        <select id="filtro-proveedor">
+            <option value="todos">Todos</option>
+            <!-- Opciones generadas dinámicamente -->
+        </select>
+
+        <label for="filtro-banco">Banco:</label>
+        <select id="filtro-banco">
+            <option value="todos">Todos</option>
+            <option value="BANRURAL">Banrural</option>
+            <option value="BI">BI</option>
+            <option value="G&T">G&T</option>
+        </select>
+    </div>
+
+    <!-- Botones de filtro por estado -->
+    <div class="filtro-estado">
+        <button class="btn-estado" data-estado="todas">Todas las Facturas</button>
+        <button class="btn-estado" data-estado="pagadas">Facturas Pagadas</button>
+        <button class="btn-estado" data-estado="porPagar">Facturas por Pagar</button>
+        <button class="btn-estado" data-estado="vencidas">Facturas Vencidas</button>
+        <button class="btn-estado" data-estado="pagoPendiente">Facturas con Pago Pendiente</button>
+        <button class="btn-estado" data-estado="prontoVencer">Facturas Pronto a Vencer (8 días)</button>
+        <button class="btn-estado" data-estado="porPagarHoy">Facturas por Pagar Hoy</button>
+    </div>
+
+    <!-- Selector de ordenamiento -->
+    <div class="ordenamiento">
+        <label for="ordenar-por">Ordenar por:</label>
+        <select id="ordenar-por">
+            <option value="masReciente">Más Reciente</option>
+            <option value="masAntiguo">Más Antiguo</option>
+            <option value="vencimientoReciente">Vencimiento Más Reciente</option>
+            <option value="vencimientoAntiguo">Vencimiento Más Antiguo</option>
+        </select>
+    </div>
+
+    <!-- Búsquedas -->
+    <div class="busquedas">
+        <input type="text" id="buscar-factura" placeholder="Buscar por No. de Factura">
+        <input type="text" id="buscar-boleta" placeholder="Buscar por Boleta ID">
+    </div>
 
     <!-- Tabla de facturas -->
     <table>
         <thead>
             <tr>
                 <th>Seleccionar</th>
-                <th>Monto Factura</th>
-                <th>Saldo Pendiente</th>
+                <th>Empresa</th>
                 <th>Sucursal</th>
+                <th>Proveedor</th>
+                <th>No. de Factura</th>
+                <th>Monto Factura</th>
+                <th>Fecha Vencimiento</th>
                 <th>Estado</th>
-                <th>Boleta ID (después del pago)</th>
+                <th>Monto Pendiente</th>
+                <th>Boleta ID</th>
+                <th>Fecha Pago</th>
+                <th>Monto Pagado</th>
+                <th>Banco</th>
                 <th>Acciones</th>
             </tr>
         </thead>
         <tbody id="facturas-table">
-            <!-- Las facturas se generarán dinámicamente a partir de scripts.js -->
+            <!-- Las facturas se generarán dinámicamente -->
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="8"></td>
+                <td><strong>Total Pendiente Seleccionado:</strong></td>
+                <td id="total-pendiente">Q0.00</td>
+                <td colspan="5"></td>
+            </tr>
+        </tfoot>
     </table>
 
-    <!-- Formulario para aplicar pago -->
-    <div class="form-group">
-        <label for="monto">Monto total a aplicar:</label>
-        <input type="number" id="monto" placeholder="Ingrese el monto del pago">
+    <!-- Modal para pagar facturas -->
+    <div id="pago-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-pago-modal" class="close">&times;</span>
+            <h3>Pagar Facturas Seleccionadas</h3>
+            <div id="facturas-seleccionadas">
+                <!-- Aquí se mostrarán las facturas seleccionadas -->
+            </div>
+            <div class="form-group">
+                <label for="monto-total">Monto total a aplicar:</label>
+                <input type="number" id="monto-total" placeholder="Ingrese el monto del pago">
+            </div>
+            <div class="form-group">
+                <label for="fecha-pago">Fecha de Pago:</label>
+                <input type="date" id="fecha-pago">
+            </div>
+            <div class="form-group">
+                <label for="numero-boleta">Número de Boleta (ID):</label>
+                <input type="text" id="numero-boleta" placeholder="Ingrese el número de boleta">
+            </div>
+            <div class="form-group">
+                <label for="banco">Banco:</label>
+                <select id="banco">
+                    <option value="">Seleccione un banco</option>
+                    <option value="BANRURAL">Banrural</option>
+                    <option value="BI">BI</option>
+                    <option value="G&T">G&T</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="sucursal-pago">Sucursal para el Pago (Quién Depositó):</label>
+                <select id="sucursal-pago">
+                    <option value="">Seleccione una sucursal</option>
+                </select>
+            </div>
+            <button class="btn" id="aplicar-pago">Aplicar Pago</button>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label for="fecha">Fecha de Pago:</label>
-        <input type="date" id="fecha">
-    </div>
-
-    <div class="form-group">
-        <label for="numero-boleta">Número de Boleta (ID):</label>
-        <input type="text" id="numero-boleta" placeholder="Ingrese el número de boleta">
-    </div>
-
-    <button class="btn" id="aplicar-pago" disabled>Aplicar Pago</button>
-    <button class="btn" id="generar-reporte">Generar Reporte</button>
 
     <!-- Modal para ver pago realizado -->
     <div id="modal" class="modal">
@@ -59,28 +269,45 @@
         </div>
     </div>
 
-    <!-- Sección para mostrar el reporte en formato de tabla -->
-    <div id="reporte-section" style="display:none;">
-        <h3>Reporte de Facturas y Boletas Asociadas</h3>
-        <table id="reporte-table">
-            <thead>
-                <tr>
-                    <th>Factura</th>
-                    <th>Monto Factura</th>
-                    <th>Saldo Pendiente</th>
-                    <th>Sucursal</th>
-                    <th>Estado</th>
-                    <th>Boleta ID</th>
-                    <th>Fecha Pago</th>
-                    <th>Monto Pagado</th>
-                </tr>
-            </thead>
-            <tbody id="reporte-contenido">
-                <!-- Contenido del reporte generado dinámicamente -->
-            </tbody>
-        </table>
+    <!-- Modal para el reporte de pantalla completa -->
+    <div id="reporte-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-reporte-modal" class="close">&times;</span>
+            <h3>Reporte de Facturas y Boletas Asociadas</h3>
+            <div id="export-buttons">
+                <button class="btn" id="export-excel">Exportar a Excel</button>
+                <button class="btn" id="export-pdf">Exportar a PDF</button>
+                <button class="btn" id="export-image">Exportar a Imagen</button>
+            </div>
+            <table id="reporte-table">
+                <thead>
+                    <tr>
+                        <th>Empresa</th>
+                        <th>Sucursal</th>
+                        <th>Proveedor</th>
+                        <th>No. de Factura</th>
+                        <th>Monto Factura</th>
+                        <th>Fecha Vencimiento</th>
+                        <th>Estado</th>
+                        <th>Monto Pendiente</th>
+                        <th>Boleta ID</th>
+                        <th>Fecha Pago</th>
+                        <th>Monto Pagado</th>
+                        <th>Total de Boleta</th>
+                        <th>Banco</th>
+                        <th>Quién Depositó</th>
+                    </tr>
+                </thead>
+                <tbody id="reporte-contenido">
+                    <!-- Contenido del reporte generado dinámicamente -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
-    <script src="scripts.js"></script> <!-- Conexión con el archivo de scripts -->
+    <!-- Archivos JavaScript -->
+    <script src="scripts.js"></script>
+    <script src="filters.js"></script> <!-- Archivo separado para filtros y búsqueda -->
+    <script src="invoiceActions.js"></script> <!-- Archivo para acciones de facturas -->
 </body>
 </html>
