--- a/empresas.html
+++ b/empresas.html
@@ -2,67 +2,124 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Empresas, Sucursales y Proveedores</title>
+    <title>Gestionar Empresas</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Librería SweetAlert2 para alertas -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <h2>Gestión de Empresas, Sucursales y Proveedores</h2>
+    <h2>Gestionar Empresas</h2>
 
-    <div class="tabs">
-        <button class="tab-link" onclick="openTab(event, 'empresas')">Empresas</button>
-        <button class="tab-link" onclick="openTab(event, 'sucursales')">Sucursales</button>
-        <button class="tab-link" onclick="openTab(event, 'proveedores')">Proveedores</button>
+    <!-- Botones de acción -->
+    <div class="acciones">
+        <button class="btn" id="agregar-empresa-btn">Agregar Empresa</button>
+        <button class="btn" id="agregar-sucursal-btn">Agregar Sucursal</button>
+        <button class="btn" id="agregar-proveedor-btn">Agregar Proveedor</button>
     </div>
 
-    <!-- Contenido de la pestaña de Empresas -->
-    <div id="empresas" class="tab-content">
-        <h3>Empresas</h3>
-        <div class="form-group">
-            <label for="nombre-empresa">Nombre de la Empresa:</label>
-            <input type="text" id="nombre-empresa">
-        </div>
-        <button class="btn" id="agregar-empresa">Agregar Empresa</button>
+    <!-- Tabla de Empresas -->
+    <h3>Empresas</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Seleccionar</th>
+                <th>Nombre de la Empresa</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="empresas-table">
+            <!-- Las empresas se generarán dinámicamente -->
+        </tbody>
+    </table>
 
-        <h4>Listado de Empresas</h4>
-        <ul id="lista-empresas"></ul>
+    <!-- Tabla de Sucursales -->
+    <h3>Sucursales</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Seleccionar</th>
+                <th>Nombre de la Sucursal</th>
+                <th>Empresa Asociada</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="sucursales-table">
+            <!-- Las sucursales se generarán dinámicamente -->
+        </tbody>
+    </table>
+
+    <!-- Tabla de Proveedores -->
+    <h3>Proveedores</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>Seleccionar</th>
+                <th>Nombre del Proveedor</th>
+                <th>Días de Crédito</th>
+                <th>Acciones</th>
+            </tr>
+        </thead>
+        <tbody id="proveedores-table">
+            <!-- Los proveedores se generarán dinámicamente -->
+        </tbody>
+    </table>
+
+    <!-- Modales -->
+
+    <!-- Modal para Agregar/Editar Empresa -->
+    <div id="empresa-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-empresa-modal" class="close">&times;</span>
+            <h3 id="empresa-modal-title">Agregar Nueva Empresa</h3>
+            <div class="form-group">
+                <label for="nombre-empresa">Nombre de la Empresa:</label>
+                <input type="text" id="nombre-empresa" placeholder="Ingrese el nombre de la empresa">
+            </div>
+            <button class="btn" id="guardar-empresa">Guardar Empresa</button>
+            <button class="btn" id="actualizar-empresa" style="display: none;">Actualizar Empresa</button>
+        </div>
     </div>
 
-    <!-- Contenido de la pestaña de Sucursales -->
-    <div id="sucursales" class="tab-content" style="display:none;">
-        <h3>Sucursales</h3>
-        <div class="form-group">
-            <label for="empresa-sucursal">Seleccione la Empresa:</label>
-            <select id="empresa-sucursal"></select>
+    <!-- Modal para Agregar/Editar Sucursal -->
+    <div id="sucursal-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-sucursal-modal" class="close">&times;</span>
+            <h3 id="sucursal-modal-title">Agregar Nueva Sucursal</h3>
+            <div class="form-group">
+                <label for="empresa-sucursal">Seleccionar Empresa:</label>
+                <select id="empresa-sucursal">
+                    <option value="">Seleccione una empresa</option>
+                    <!-- Opciones generadas dinámicamente -->
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="nombre-sucursal">Nombre de la Sucursal:</label>
+                <input type="text" id="nombre-sucursal" placeholder="Ingrese el nombre de la sucursal">
+            </div>
+            <button class="btn" id="guardar-sucursal">Guardar Sucursal</button>
+            <button class="btn" id="actualizar-sucursal" style="display: none;">Actualizar Sucursal</button>
         </div>
-        <div class="form-group">
-            <label for="nombre-sucursal">Nombre de la Sucursal:</label>
-            <input type="text" id="nombre-sucursal">
-        </div>
-        <button class="btn" id="agregar-sucursal">Agregar Sucursal</button>
-
-        <h4>Listado de Sucursales y Empresas Asociadas</h4>
-        <ul id="lista-sucursales"></ul>
     </div>
 
-    <!-- Contenido de la pestaña de Proveedores -->
-    <div id="proveedores" class="tab-content" style="display:none;">
-        <h3>Proveedores</h3>
-        <div class="form-group">
-            <label for="nombre-proveedor">Nombre del Proveedor:</label>
-            <input type="text" id="nombre-proveedor">
+    <!-- Modal para Agregar/Editar Proveedor -->
+    <div id="proveedor-modal" class="modal">
+        <div class="modal-content">
+            <span id="close-proveedor-modal" class="close">&times;</span>
+            <h3 id="proveedor-modal-title">Agregar Nuevo Proveedor</h3>
+            <div class="form-group">
+                <label for="nombre-proveedor">Nombre del Proveedor:</label>
+                <input type="text" id="nombre-proveedor" placeholder="Ingrese el nombre del proveedor">
+            </div>
+            <div class="form-group">
+                <label for="dias-credito-proveedor">Días de Crédito:</label>
+                <input type="number" id="dias-credito-proveedor" placeholder="Ingrese los días de crédito" min="0">
+            </div>
+            <button class="btn" id="guardar-proveedor">Guardar Proveedor</button>
+            <button class="btn" id="actualizar-proveedor" style="display: none;">Actualizar Proveedor</button>
         </div>
-        <div class="form-group">
-            <label for="dias-credito">Días de Crédito:</label>
-            <input type="number" id="dias-credito">
-        </div>
-        <button class="btn" id="agregar-proveedor">Agregar Proveedor</button>
-
-        <h4>Listado de Proveedores</h4>
-        <ul id="lista-proveedores"></ul>
     </div>
 
-    <script src="gestionar.js"></script>
+    <!-- Scripts JavaScript -->
+    <script src="empresas.js"></script>
 </body>
 </html>
