formato facturas corecto

--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -222,9 +222,8 @@
             <tr>
                 <th>Seleccionar</th>
                 <th>Empresa</th>
-                <th>Sucursal</th>
                 <th>Fecha de Factura</th>
-                <th>No. de Factura</th>
+                <th>Número de Factura</th>
                 <th>Monto de Factura</th>
                 <th>Fecha de Vencimiento</th>
                 <th>Estado</th>
@@ -244,7 +243,7 @@
                 <td colspan="8"></td>
                 <td><strong>Total Abono Seleccionado:</strong></td>
                 <td id="total-pendiente">Q0.00</td>
-                <td colspan="5"></td>
+                <td colspan="4"></td>
             </tr>
         </tfoot>
     </table>
@@ -325,9 +324,8 @@
                 <thead>
                     <tr>
                         <th>Empresa</th>
-                        <th>Sucursal</th>
                         <th>Fecha de Factura</th>
-                        <th>No. de Factura</th>
+                        <th>Número de Factura</th>
                         <th>Monto de Factura</th>
                         <th>Fecha de Vencimiento</th>
                         <th>Estado</th>
